// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should mount a complete notification-dialog 1`] = `
<CompleteNotificationDialog
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <div>
    <NotificationDialog
      acceptAction={
        Object {
          "onClick": [Function],
          "text": "Confirm",
        }
      }
      buttonOrder="acceptFirst"
      content={null}
      emphasizedAction="accept"
      endMessage={null}
      isOpen={false}
      rejectAction={
        Object {
          "onClick": [Function],
          "text": "Close",
        }
      }
      startMessage="The Main Instruction is text used to provide more detail or define terminology. Don’t repeat the title verbatim."
      title="Make sure that the title relates directly to the choices."
      variant="alert"
    />
    <Button
      id="trigger-notification-dialog"
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger NotificationDialog"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        id="trigger-notification-dialog"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label text-only"
        >
          <span
            className=""
          >
            Trigger NotificationDialog
          </span>
        </span>
      </button>
    </Button>
  </div>
</CompleteNotificationDialog>
`;

exports[`should mount a complete notification-dialog with long message 1`] = `
<CompleteNotificationDialogWithLongMessage
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <div>
    <NotificationDialog
      acceptAction={
        Object {
          "onClick": [Function],
          "text": "Confirm",
        }
      }
      buttonOrder="acceptFirst"
      content={null}
      emphasizedAction="accept"
      endMessage={null}
      isOpen={false}
      rejectAction={
        Object {
          "onClick": [Function],
          "text": "Close",
        }
      }
      startMessage="This is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the message"
      title="This is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the title"
      variant="success"
    />
    <Button
      id="trigger-notification-dialog"
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger NotificationDialog"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        id="trigger-notification-dialog"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label text-only"
        >
          <span
            className=""
          >
            Trigger NotificationDialog
          </span>
        </span>
      </button>
    </Button>
  </div>
</CompleteNotificationDialogWithLongMessage>
`;

exports[`should mount a notification-dialog with no variant 1`] = `
<NoVariantNotificationDialog
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <div>
    <NotificationDialog
      acceptAction={
        Object {
          "onClick": [Function],
          "text": "Confirm",
        }
      }
      buttonOrder="acceptFirst"
      content={null}
      emphasizedAction="accept"
      endMessage={null}
      header="No Variant for this dialog"
      isOpen={false}
      rejectAction={
        Object {
          "onClick": [Function],
          "text": "Close",
        }
      }
      startMessage="The Main Instruction is text used to provide more detail or define terminology. Don’t repeat the title verbatim."
      title="Make sure that the title relates directly to the choices."
      variant="custom"
    />
    <Button
      id="trigger-notification-dialog"
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger Notification Dialog"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        id="trigger-notification-dialog"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label text-only"
        >
          <span
            className=""
          >
            Trigger Notification Dialog
          </span>
        </span>
      </button>
    </Button>
  </div>
</NoVariantNotificationDialog>
`;

exports[`should shallow a complete notification-dialog 1`] = `
<div>
  <NotificationDialog
    acceptAction={
      Object {
        "onClick": [Function],
        "text": "Confirm",
      }
    }
    buttonOrder="acceptFirst"
    content={null}
    emphasizedAction="accept"
    endMessage={null}
    isOpen={false}
    rejectAction={
      Object {
        "onClick": [Function],
        "text": "Close",
      }
    }
    startMessage="The Main Instruction is text used to provide more detail or define terminology. Don’t repeat the title verbatim."
    title="Make sure that the title relates directly to the choices."
    variant="alert"
  />
  <Button
    id="trigger-notification-dialog"
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger NotificationDialog"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`should shallow a complete notification-dialog with long message 1`] = `
<div>
  <NotificationDialog
    acceptAction={
      Object {
        "onClick": [Function],
        "text": "Confirm",
      }
    }
    buttonOrder="acceptFirst"
    content={null}
    emphasizedAction="accept"
    endMessage={null}
    isOpen={false}
    rejectAction={
      Object {
        "onClick": [Function],
        "text": "Close",
      }
    }
    startMessage="This is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the messageThis is the message"
    title="This is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the titleThis is the title"
    variant="success"
  />
  <Button
    id="trigger-notification-dialog"
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger NotificationDialog"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`should shallow a notification-dialog with no variant 1`] = `
<div>
  <NotificationDialog
    acceptAction={
      Object {
        "onClick": [Function],
        "text": "Confirm",
      }
    }
    buttonOrder="acceptFirst"
    content={null}
    emphasizedAction="accept"
    endMessage={null}
    header="No Variant for this dialog"
    isOpen={false}
    rejectAction={
      Object {
        "onClick": [Function],
        "text": "Close",
      }
    }
    startMessage="The Main Instruction is text used to provide more detail or define terminology. Don’t repeat the title verbatim."
    title="Make sure that the title relates directly to the choices."
    variant="custom"
  />
  <Button
    id="trigger-notification-dialog"
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger Notification Dialog"
    type="button"
    variant="neutral"
  />
</div>
`;
